# gaia-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  evaluate_agent_on_dataset.py  gaia_score_evaluator.py  latency_evaluator.py  main.py  print_mermaid_for_agent_graph.py  pyproject.toml  requirements.txt  run_agent_evaluation.py  run_with_custom_prompt.py  run_with_custom_user_message.py  token_usage_evaluator.py  total_turns_evaluator.py
agent/: agent_result.py  file_paths.py  graph.py  invoke_agent_with_user_message.py  main.py  tools.py
agent/edges/: check_answer_routing.py  should_continue.py
agent/nodes/: llm_call.py  return_llm_refusal.py  return_llm_tool_not_available.py  should_continue.py
agent/prompts/: get_prompt.py  prompts.yaml
evaluators/: gaia_score_evaluator.py
evaluators/metrics/: latency_evaluator.py  token_usage_evaluator.py  total_turns_evaluator.py
scripts/: evaluate_agent.py  migrate_langfuse_dataset_to_langsmith.py  print_mermaid_for_agent_graph.py
src/: evaluate_agent_on_dataset.py
src/agent/: agent_response.py  deps.py  graph.py  invoke_agent_with_user_message.py
src/agent_graph/: agent_dependencies.py  agent_response.py  build_agent_graph_and_config.py  build_system_prompt.py  invoke_agent_with_user_message.py
src/evaluators/: gaia_score_evaluator.py
src/llm_wrappers/: gemini_image_analyzer.py
src/observability/: tracing.py
src/tools/: audio_transcriber.py  code_runner.py  document_parser.py  execute_code.py  image_analyzer.py  parse_document.py  shutdown_tools.py  tool_response.py  web_search.py
tests/: test_evaluate_agent_on_dataset.py  test_gaia_score_evaluator.py  test_latency_evaluator.py  test_main.py  test_run_agent_evaluation.py  test_token_usage_evaluator.py  test_total_turns_evaluator.py
tests/agent/: test_file_paths.py  test_graph.py  test_invoke_agent_with_user_message.py
tests/agent_graph/: test_build_agent_graph_and_config.py  test_file_paths.py  test_graph.py  (+1 more)
tools/: execute_code.py
(+59 files in other folders)
