[project]
name = "gaia-agent-orchestrator"
version = "0.1.0"
description = "GAIA agent orchestrator using LangGraph"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4.1",
    "langchain-anthropic>=0.3.0",
    "python-dotenv>=1.0.0",
    "langchain-tavily>=0.2.17",
    "langfuse>=4.0.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
